tests/predator-regre/test-0266.err
test-0266.c:13: error: double free by free()
